--- a/wener-im/src/App.css
+++ b/wener-im/src/App.css
@@ -1,7 +1,14 @@
 .mainNavbarContainer {
     justify-content: flex-end;
   }
-
+.item-rows{
+  background: white;
+  padding: 15px;
+  padding-right: 5px;
+}
+.item-rows:nth-child(odd){
+  background: #ebeaea46;
+}
 @media only screen and (max-width: 767px) {
         .mainNavbarContainer {
           justify-content: space-between;
